--- a/Progetto_Spring_boot/src/main/resources/application.properties
+++ b/Progetto_Spring_boot/src/main/resources/application.properties
@@ -23,12 +23,12 @@ custom.percorsoFileRicevuti=/home/download/
 custom.percorsoFileCaricati=/home/upload/
 
 #servono a thymeleaf per capire chi sta parlando nella chat
-custom.mittente=partecipante1
-custom.destinatario=partecipante2
+#custom.mittente=partecipante1
+#custom.destinatario=partecipante2
 
 #il nome delle code da creare
-coda.produttore=coda2
-coda.consumatore=coda1
+#coda.produttore=coda2
+#coda.consumatore=coda1
 
 #indirizzo del brocker dei messaggi
 rabbit.indirizzo=172.22.0.1
