--- a/Progetto_Spring_boot/src/main/resources/application.properties
+++ b/Progetto_Spring_boot/src/main/resources/application.properties
@@ -35,6 +35,6 @@ custom.percorsoFileCaricati=/home/upload/
 
 #indirizzo del brocker dei messaggi
 #rabbit.indirizzo=172.22.0.1
-#rabbit.indirizzo=rabbitmq
+rabbit.indirizzo=rabbitmq
 #rabbit.indirizzo=localhost
 #server.port=8081
